# inline-js-example

./: README.md  README.org  default.nix  inline-js-example.cabal
app/: Main.hs
nix/: sources.json
src/: InlineJsExample.hs
test/: Main.hs
