name:                inline-js-example
synopsis:            Project synopsis
version:             0.0.1.0
homepage:            https://github.com/your_github_username/inline-js-example
license:             BSD3
author:              Your Name
maintainer:          Your Name
copyright:           Your Name
category:            Package.Category
build-type:          Simple
cabal-version:       >=1.10


source-repository head
  type: git
  location: https://github.com/tweag/inline-js
            
library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     InlineJsExample
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       base >= 4.11 && < 5
                     , inline-js
                     , aeson   

executable inline-js-example
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -threaded -O2
  build-depends:      base
                    , inline-js-example

test-suite inline-js-example-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:    base >=4.11 && < 5
                  , inline-js-example
                  , hedgehog
